Adding assignment for Number Format Exception